--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ a:hover {
 <p class="contact"><a href="http://twitter.com/graciasa">@graciasa</a><br>
     <small>holies&#64;timetabl&#46;com</small></p>
 <p class="resource">
+    <a href="checker.html">checker.html</a>
     <a href="gitconfig">gitconfig</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
     <a href="vimrc">vimrc</a></p>
