Add a link to sublime.js

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ a:hover {
 <p class="resource">
     <a href="checker.html">checker.html</a>
     <a href="gitconfig">gitconfig</a>
+    <a href="sublime.js">sublime.js</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
     <a href="vimrc">vimrc</a></p>
 </body>
