Append file name extensions

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ a:hover {
     <small>holies&#64;timetabl&#46;com</small></p>
 <p class="resource">
     <a href="checker.html">checker.html</a>
-    <a href="gitconfig">gitconfig</a>
+    <a href="gitconfig.sh">gitconfig.sh</a>
     <a href="sublime.js">sublime.js</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
-    <a href="vimrc">vimrc</a></p>
+    <a href="vimrc.txt">vimrc.txt</a></p>
 </body>
 </html>
