Add github link

--- a/index.html
+++ b/index.html
@@ -180,8 +180,11 @@ a:hover {
 </head>
 <body>
 <h1><span>h</span><span>o</span><span>l</span><span>i</span><span>e</span><span>s</span></h1>
-<p class="contact"><a href="http://twitter.com/graciasa">@graciasa</a><br>
-    <small>holies&#64;timetabl&#46;com</small></p>
+<p class="contact">
+	<a href="http://twitter.com/graciasa">@graciasa</a><br>
+    <small>holies&#64;timetabl&#46;com</small><br>
+	<a href="https://github.com/holies">holies @ GitHub</a>
+</p>
 <p class="resource">
     <a href="checker.html">checker.html</a>
     <a href="gitconfig.sh">gitconfig.sh</a>
