--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ a:hover {
 </p>
 <p class="resource">
     <a href="checker.html">checker.html</a>
-    <a href="gitconfig.sh">gitconfig.sh</a>
+    <a href="gitconfig.txt">gitconfig.txt</a>
     <a href="sublime.js">sublime.js</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
     <a href="vimrc.txt">vimrc.txt</a></p>
