--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ a:hover {
 <p class="contact">
 	<a href="http://twitter.com/graciasa">@graciasa</a><br>
     <small>holies&#64;timetabl&#46;com</small><br>
-	<a href="https://github.com/holies">holies @ GitHub</a>
+	<small><a href="https://github.com/holies">holies @ GitHub</a></small>
 </p>
 <p class="resource">
     <a href="checker.html">checker.html</a>
