--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@ a:hover {
     <a href="checker.html">checker.html</a>
     <a href="gitconfig.txt">gitconfig.txt</a>
     <a href="sublime.js">sublime.js</a>
+	<br>
     <a href="putty-tango.reg">putty-tango.reg</a>
     <a href="vimrc.txt">vimrc.txt</a>
     <a href="flowers.jpg">flowers.jpg</a>
+    <a href="tangocmd.reg">tangocmd.reg</a>
 </p>
 </body>
 </html>
