--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
     text-align: center;
     line-height: 2;
     text-shadow: 0 2px 2px rgba(0,0,0,0.5);
+    -webkit-text-size-adjust: none;
 }
 @media only screen and (max-height: 480px) {
     body {
