--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body {
     overflow: hidden;
-    margin: 5em 0;
+    margin: 5em 1em;
     background: #328AAE;
     color: #fff;
     text-align: center;
@@ -17,7 +17,7 @@ body {
 }
 @media only screen and (max-height: 480px) {
     body {
-        margin: 1em 0;
+        margin: 1em;
     }
 }
 h1 {
@@ -123,8 +123,7 @@ a:hover {
     text-shadow: 0 3px 3px rgba(0,0,0,0.5);
 }
 .resource {
-    width: 35em;
-    margin: 5em auto;
+    margin: 5em 0;
     font-family: Corbel, Gill Sans, Tahoma, sans-serif;
     font-weight: 100;
     font-size: 10pt;
