--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ p {
 <h1><span>h</span><span>o</span><span>l</span><span>i</span><span>e</span><span>s</span></h1>
 <p class="resource">
     <a href="checker.html">checker.html</a>
-    <a href="gitconfig.txt">gitconfig.txt</a>
+    <a href="gitconfig">gitconfig</a>
     <a href="sublime.js">sublime.js</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
-    <a href="vimrc.txt">vimrc.txt</a>
+    <a href="vimrc">vimrc</a>
     <a href="flowers.jpg">flowers.jpg</a>
     <a href="tangocmd.reg">tangocmd.reg</a>
 </p>
