--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ p {
     <a href="vimrc">vimrc</a>
     <a href="flowers.jpg">flowers.jpg</a>
     <a href="tangocmd.reg">tangocmd.reg</a>
+    <a href="tmux.conf">tmux.conf</a>
 </p>
-<p class="code">cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime</p>
 </body>
 </html>
 
