--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ p {
     <a href="sublime.js">sublime.js</a>
     <a href="putty-tango.reg">putty-tango.reg</a>
     <a href="vimrc">vimrc</a>
+    <a href="install-vim-bundle">install-vim-bundle</a>
     <a href="flowers.jpg">flowers.jpg</a>
     <a href="tangocmd.reg">tangocmd.reg</a>
     <a href="tmux.conf">tmux.conf</a>
