--- a/index.html
+++ b/index.html
@@ -3,141 +3,20 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1">
-<title>holies</title>
-<style>
-body {
-    margin: 4em;
-    background: #328aae;
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
-    -webkit-text-size-adjust: none;
-    font: 400 100%/2 Corbel, Gill Sans, Tahoma, sans-serif;
-}
-@media only screen and (max-height: 480px) {
-    body {
-        margin: 1em;
-    }
-}
-h1 {
-    font: 700 400%/2 Jokerman, Party LET, Comic Sans MS, Verdana, sans-serif;
-    letter-spacing: 0.1ex;
-}
-h1 span {
-    display: inline-block;
-}
-
-h1 span:nth-child(1) { -webkit-animation: ANI1 1.5s ease-out forwards }
-h1 span:nth-child(2) { -webkit-animation: ANI2 1.5s ease-out forwards }
-h1 span:nth-child(3) { -webkit-animation: ANI3 1.5s ease-out forwards }
-h1 span:nth-child(4) { -webkit-animation: ANI4 1.5s ease-out forwards }
-h1 span:nth-child(5) { -webkit-animation: ANI5 1.5s ease-out forwards }
-h1 span:nth-child(6) { -webkit-animation: ANI6 1.5s ease-out forwards }
-@-webkit-keyframes ANI1 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(-9em, -4em) rotate(300deg) }
-}
-@-webkit-keyframes ANI2 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(-5em, -4em) rotate(-200deg) }
-}
-@-webkit-keyframes ANI3 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(-2em, -4em) rotate(400deg) }
-}
-@-webkit-keyframes ANI4 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(2em, -4em) rotate(-500deg) }
-}
-@-webkit-keyframes ANI5 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(5em, -4em) rotate(300deg) }
-}
-@-webkit-keyframes ANI6 {
-    0% { opacity: 0 }
-    30% { opacity: 0; -webkit-transform: translate(9em, -4em) rotate(-400deg) }
-}
-
-h1 span:nth-child(1) { animation: ANI1 1.5s ease-out forwards }
-h1 span:nth-child(2) { animation: ANI2 1.5s ease-out forwards }
-h1 span:nth-child(3) { animation: ANI3 1.5s ease-out forwards }
-h1 span:nth-child(4) { animation: ANI4 1.5s ease-out forwards }
-h1 span:nth-child(5) { animation: ANI5 1.5s ease-out forwards }
-h1 span:nth-child(6) { animation: ANI6 1.5s ease-out forwards }
-@keyframes ANI1 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(-9em, -4em) rotate(300deg) }
-}
-@keyframes ANI2 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(-5em, -4em) rotate(-200deg) }
-}
-@keyframes ANI3 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(-2em, -4em) rotate(400deg) }
-}
-@keyframes ANI4 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(2em, -4em) rotate(-500deg) }
-}
-@keyframes ANI5 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(5em, -4em) rotate(300deg) }
-}
-@keyframes ANI6 {
-    0% { opacity: 0 }
-    30% { opacity: 0; transform: translate(9em, -4em) rotate(-400deg) }
-}
-
-@-webkit-keyframes POP {
-    0% { -webkit-transform: scale(0) }
-    50% { -webkit-transform: scale(1.2) }
-    100% { -webkit-transform: scale(1) }
-}
-@keyframes POP {
-    0% { transform: scale(0) }
-    50% { transform: scale(1.2) }
-    100% { transform: scale(1) }
-}
-a {
-    text-decoration: none;
-    color: #fff;
-}
-a:hover {
-    position: relative;
-    top: -1px;
-    text-shadow: 0 3px 3px rgba(0,0,0,0.5);
-}
-p {
-	max-width: 25em;
-    margin: 4em auto;
-	-webkit-transform: scale(0);
-	transform: scale(0);
-    -webkit-animation: POP .5s ease-out 1.3s forwards;
-    animation: POP .5s ease-out 1.3s forwards;
-}
-.resource {
-    word-spacing: 1em;
-}
-.code {
-    -webkit-animation-delay: 1.6s;
-    animation-delay: 1.6s;
-}
-</style>
+<title>angn</title>
 </head>
 <body>
-<h1><span>h</span><span>o</span><span>l</span><span>i</span><span>e</span><span>s</span></h1>
-<p class="resource">
-    <a href="checker.html">checker.html</a>
-    <a href="gitconfig">gitconfig</a>
-    <a href="sublime.js">sublime.js</a>
-    <a href="putty-tango.reg">putty-tango.reg</a>
-    <a href="vimrc">vimrc</a>
-    <a href="install-vim-bundle">install-vim-bundle</a>
-    <a href="flowers.jpg">flowers.jpg</a>
-    <a href="tangocmd.reg">tangocmd.reg</a>
-    <a href="tmux.conf">tmux.conf</a>
-</p>
+<ul>
+<li><a href="checker.html">checker.html</a></li>
+<li><a href="gitconfig">gitconfig</a></li>
+<li><a href="sublime.js">sublime.js</a></li>
+<li><a href="putty-tango.reg">putty-tango.reg</a></li>
+<li><a href="vimrc">vimrc</a></li>
+<li><a href="install-vim-bundle">install-vim-bundle</a></li>
+<li><a href="flowers.jpg">flowers.jpg</a></li>
+<li><a href="tangocmd.reg">tangocmd.reg</a></li>
+<li><a href="tmux.conf">tmux.conf</a></li>
+<li><a href=".screenrc">.screenrc</a></li>
+</ul>
 </body>
 </html>
-
