--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <li><a href="flowers.jpg">flowers.jpg</a></li>
 <li><a href="tangocmd.reg">tangocmd.reg</a></li>
 <li><a href="tmux.conf">tmux.conf</a></li>
-<li><a href=".screenrc">.screenrc</a></li>
+<li><a href="screenrc">screenrc</a></li>
 </ul>
 </body>
 </html>
